--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "footer": "Status page hosted by GitHub",
-    "logo": "https://github.com/healthbankapp/healthbankapp/blob/gh-pages/Health_bank_final.jpg?raw=true",
+    "logo": "https://raw.githubusercontent.com/healthbankapp/healthbankapp/gh-pages/Health_bank_final.jpg",
     "title": "HealthBankApp Status",
-    "favicon": "https://github.com/healthbankapp/healthbankapp/blob/gh-pages/favicon.ico?raw=true"
+    "favicon": "https://github.com/healthbankapp/healthbankapp/raw/gh-pages/favicon.ico"
 }
