--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "footer": "Status page hosted by GitHub",
+    "footer": "Please report any issues to helpdesk@healthbankapp.com",
     "logo": "https://raw.githubusercontent.com/healthbankapp/healthbankapp/gh-pages/Health_bank_final.jpg",
     "title": "HealthBankApp Status",
     "favicon": "https://github.com/healthbankapp/healthbankapp/raw/gh-pages/favicon.ico"
